--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "date-and-time": "^1.0.0",
     "express": "^4.17.1",
+    "node-emoji": "^1.10.0",
     "node-fetch": "^2.6.1",
     "node-nlp": "^4.22.1",
     "request": "^2.88.2",
